# xceptionnet

./: .gitignore  README.md  detect_from_video.py  pyproject.toml  requirements.txt  test_xception.py  train_xception.py  xception.py
network/: models.py
xception/: __init__.py
